syntax = "proto3";

option csharp_namespace = "Part03GrpcService1";

package secure;

// Определение сервиса
service SecureService {
  rpc GetSecretMessage (SecretRequest) returns (SecretResponse);
}

// Входное сообщение
message SecretRequest {
  string requestId = 1;
}

// Выходное сообщение
message SecretResponse {
  string message = 1;
}